--- a/Pages/NavigationPages/AddCourseNavPage.xaml
+++ b/Pages/NavigationPages/AddCourseNavPage.xaml
@@ -36,7 +36,7 @@
                            TextColor="Black" 
                            FontSize="20" 
                            FontAttributes="Bold"/>
-                    
+
                     <Entry x:Name="CourseNameEntry"
                            Placeholder="Enter course name"
                            Grid.Row="1"
@@ -79,7 +79,7 @@
                                 HorizontalOptions="Start"/>
                 </Grid>
             </Frame>
-            
+
             <Frame BorderColor="Black"
                    CornerRadius="5"
                    Padding="15"
@@ -243,6 +243,41 @@
                            FontSize="20"
                            TextColor="Black"
                            Keyboard="Telephone"/>
+                </Grid>
+            </Frame>
+
+            <Frame  BorderColor="Black"
+                    CornerRadius="5"
+                    Padding="15"
+                    BackgroundColor="Azure"
+                    HasShadow="True"
+                    Margin="0,20,0,0">
+                <Grid ColumnSpacing="5" RowSpacing="5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Label Text="Additional Notes" 
+                            HorizontalTextAlignment="Start" 
+                            VerticalTextAlignment="Start" 
+                            Padding="3" 
+                            TextColor="Black" 
+                            FontSize="20" 
+                            FontAttributes="Bold"/>
+                    
+                    <Editor x:Name="AdditionalNotesEntry"
+                            Placeholder="Enter additional notes here"
+                            Grid.Row="1"
+                            Grid.Column="0"
+                            FontSize="20"
+                            TextColor="Black"
+                            HeightRequest="100"
+                            AutoSize="TextChanges" />
                 </Grid>
             </Frame>
 
