--- a/Pages/NavigationPages/CoursesNavPage.xaml
+++ b/Pages/NavigationPages/CoursesNavPage.xaml
@@ -56,6 +56,21 @@
                                         Clicked="navCoursePageButton_Clicked" />
 
                                 <Button 
+                                    x:Name="EditButton"
+                                    Text="Edit" 
+                                    Grid.Row="0" 
+                                    Grid.Column="1" 
+                                    FontAttributes="Bold" 
+                                    FontSize="20" 
+                                    WidthRequest="70" 
+                                    HorizontalOptions="End" 
+                                    Grid.RowSpan="1" 
+                                    BackgroundColor="#FFA500"
+                                    TextColor="White"
+                                    CommandParameter="{Binding .}"
+                                    Clicked="EditButton_Clicked"/>
+
+                                <Button 
                                     x:Name="DeleteButton"
                                     Text="Delete" 
                                     Grid.Row="2" 
