--- a/Pages/NavigationPages/AssessmentsNavPage.xaml
+++ b/Pages/NavigationPages/AssessmentsNavPage.xaml
@@ -7,108 +7,94 @@
     <ScrollView>
         <VerticalStackLayout Padding="0,0,0,50">
             <Label 
-            Text="Assessment View"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" 
-            TextColor="Black"
-            FontSize="24"
-            FontAttributes="Bold"
-            Margin="20,50,20,0"/>
-            <Label 
-            Text="Data Structures &amp; Algorithms"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" 
-            TextColor="Black"
-            FontSize="26"
-            FontAttributes="Bold"
-            Margin="20,40,20,0"/>
+                Text="Assessment View"
+                VerticalOptions="Center" 
+                HorizontalOptions="Center" 
+                TextColor="Black"
+                FontSize="24"
+                FontAttributes="Bold"
+                Margin="20,50,20,0"/>
 
-            <Frame BorderColor="Black"
-             CornerRadius="5"
-             Padding="5"
-             BackgroundColor="Azure"
-             HasShadow="True"
-             Margin="10,20,10,0">
-                <Grid ColumnSpacing="0" RowSpacing="15">
+            <CollectionView x:Name="AssessmentCollection">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Frame 
+                                BorderColor="Black"
+                                CornerRadius="15"
+                                Padding="15"
+                                BackgroundColor="Azure"
+                                HasShadow="True"
+                                Margin="10,35,10,0">
 
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
+                            <Grid ColumnSpacing="5" RowSpacing="5">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
 
-                    <Label Text="Objective Assessment" Grid.Row="0" Grid.Column="0"  FontSize="22" FontAttributes="Bold" TextColor="Black" />
-                    <Label Text="Name" Grid.Row="1" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="Black" />
-                    <Label Text="Start Date " Grid.Row="2" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="Black" />
-                    <Label Text="End Date " Grid.Row="3" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="Black" />
-                    <Button Text="Edit" 
-                            Grid.Row="0" 
-                            Grid.Column="1" 
-                            CommandParameter="1"
-                            FontAttributes="Bold" 
-                            FontSize="20" 
-                            WidthRequest="70" 
-                            HorizontalOptions="End" 
-                            Grid.RowSpan="1" 
-                            BackgroundColor="#FFA500"
-                            TextColor="White"
-                            Clicked="Button_Clicked"/>
-                </Grid>
-            </Frame>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
 
-            <Frame BorderColor="Black"
-             CornerRadius="5"
-             Padding="5"
-             BackgroundColor="Azure"
-             HasShadow="True"
-             Margin="10,15,10,0">
-                <Grid ColumnSpacing="0" RowSpacing="15">
+                                <Label Text="{Binding Name}" HorizontalTextAlignment ="Start" VerticalTextAlignment="Start" Padding="0" TextColor="Black" FontSize="24" FontAttributes="Bold" />
+                                <Label Text="{Binding StartDate, StringFormat='Start: {0:MM/dd/yyyy}'}" Grid.Row="1" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="DarkCyan" />
+                                <Label Text="{Binding EndDate, StringFormat='End: {0:MM/dd/yyyy}'}" Grid.Row="2" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="DarkCyan" />
+                                <Label Text="{Binding Type, StringFormat='Type: {0}'}" Grid.Row="3" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="DarkViolet" />
 
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
+                                <Button 
+                                    x:Name="EditButton"
+                                    Text="Edit" 
+                                    Grid.Row="0" 
+                                    Grid.Column="1" 
+                                    FontAttributes="Bold" 
+                                    FontSize="20" 
+                                    WidthRequest="70" 
+                                    HorizontalOptions="End" 
+                                    Grid.RowSpan="1" 
+                                    BackgroundColor="#FFA500"
+                                    TextColor="White"
+                                    CommandParameter="{Binding .}"
+                                    Clicked="EditButton_Clicked"
+                                    />
 
-                    <Label Text="Performance Assessment" Grid.Row="0" Grid.Column="0"  FontSize="22" FontAttributes="Bold" TextColor="Black" />
-                    <Label Text="Name" Grid.Row="1" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="Black" />
-                    <Label Text="Start" Grid.Row="2" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="Black" />
-                    <Label Text="End" Grid.Row="3" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="Black" />
-                    
-                    <Button Text="Edit" 
-                            Grid.Row="0" 
-                            Grid.Column="1" 
-                            CommandParameter="2"
-                            FontAttributes="Bold" 
-                            FontSize="20" 
-                            WidthRequest="70" 
-                            HorizontalOptions="End" 
-                            Grid.RowSpan="1" 
-                            BackgroundColor="#FFA500"
-                            TextColor="White"
-                            Clicked="Button_Clicked"/>
-                </Grid>
-            </Frame>
+                                <Button 
+                                    x:Name="DeleteButton"
+                                    Text="Delete" 
+                                    Grid.Row="2" 
+                                    Grid.Column="1" 
+                                    FontAttributes="Bold" 
+                                    FontSize="20" 
+                                    WidthRequest="90" 
+                                    HorizontalOptions="End" 
+                                    Grid.RowSpan="2" 
+                                    BackgroundColor="OrangeRed"
+                                    CommandParameter="{Binding .}"
+                                    Clicked="DeleteButton_Clicked"
+                                    />
+                            </Grid>
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+
             <Button
-                Text="Drop Assessment"
+                x:Name="AddAssessmentButton"
+                Text="Add Assessment"
+                TextColor="White"
                 WidthRequest="300"
-                Margin="0,15,0,0"
-                BackgroundColor="OrangeRed"
+                Margin="0,50,0,0"
+                BackgroundColor="#007ACC"
                 FontAttributes="Bold"
                 FontSize="22"
-                HorizontalOptions="Center"/>
+                HorizontalOptions="Center"
+                Clicked="AddAssessmentButton_Clicked"
+                />
+
         </VerticalStackLayout>
+        
     </ScrollView>
 </ContentPage>
