--- a/Pages/NavigationPages/CoursesNavPage.xaml
+++ b/Pages/NavigationPages/CoursesNavPage.xaml
@@ -43,7 +43,7 @@
                                 <Label Text="{Binding Name}" HorizontalTextAlignment ="Start" VerticalTextAlignment="Start" Padding="0" TextColor="Black" FontSize="24" FontAttributes="Bold" />
                                 <Label Text="{Binding StartDate, StringFormat='Start: {0:MM/dd/yyyy}'}" Grid.Row="1" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="DarkCyan" />
                                 <Label Text="{Binding EndDate, StringFormat='End: {0:MM/dd/yyyy}'}" Grid.Row="2" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="DarkCyan" />
-                                <Label Text="{Binding Status, StringFormat=Status: {0}}" Grid.Row="3" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="ForestGreen" />
+                                <Label Text="{Binding Status, StringFormat='Status: {0}'}" Grid.Row="3" Grid.Column="0"  FontSize="16" FontAttributes="Bold" TextColor="ForestGreen" />
 
                                 <Button x:Name="navCoursePageButton"
                                         Grid.Row="0" 
