--- a/Pages/NavigationPages/EditAssessmentNavPage.xaml
+++ b/Pages/NavigationPages/EditAssessmentNavPage.xaml
@@ -6,19 +6,20 @@
              BackgroundColor="GhostWhite">
     <ScrollView>
         <VerticalStackLayout Padding="10">
-            <Label Text="Edit Assessment"
-                   FontSize="30"
-                   FontAttributes="Bold"
-                   Margin="0,20,0,40"
-                   TextColor="Black"
-                   HorizontalOptions="Center"/>
+            <Label 
+                Text="Edit Assessment"
+                FontSize="30"
+                FontAttributes="Bold"
+                Margin="0,20,0,40"
+                TextColor="Black"
+                HorizontalOptions="Center"/>
 
             <Frame BorderColor="Black"
-                   CornerRadius="5"
-                   Padding="15"
-                   BackgroundColor="Azure"
-                   HasShadow="True"
-                   Margin="0,50,0,0">
+                    CornerRadius="5"
+                    Padding="015"
+                    BackgroundColor="Azure"
+                    HasShadow="True"
+                    Margin="0,50,0,0">
                 <Grid ColumnSpacing="5" RowSpacing="5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -29,27 +30,24 @@
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
 
-                    <Label Text="Assessment Name" 
-                           HorizontalTextAlignment="Start" 
-                           VerticalTextAlignment="Start"
-                           Padding="3" 
-                           TextColor="Black" 
-                           FontSize="20" 
-                           FontAttributes="Bold"/>
-                    <Entry Placeholder="Enter assessment name"
-                           Grid.Row="1"
-                           Grid.Column="0"
-                           FontSize="20"
-                           TextColor="Black"/>
+                    <Label Text="Assessment Name" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" 
+                   Padding="3" TextColor="Black" FontSize="20" FontAttributes="Bold"/>
+                    <Entry x:Name="AssessmentNameEntry"
+                   
+                   Placeholder="Enter assessment name"
+                   Grid.Row="1"
+                   Grid.Column="0"
+                   FontSize="20"
+                   TextColor="Black"/>
                 </Grid>
             </Frame>
 
             <Frame BorderColor="Black"
-                   CornerRadius="5"
-                   Padding="15"
-                   BackgroundColor="Azure"
-                   HasShadow="True"
-                   Margin="0,20,0,0">
+           CornerRadius="5"
+           Padding="015"
+           BackgroundColor="Azure"
+           HasShadow="True"
+           Margin="0,20,0,0">
                 <Grid ColumnSpacing="5" RowSpacing="5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -60,29 +58,25 @@
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
 
-                    <Label Text="Start Date" 
-                           HorizontalTextAlignment="Start" 
-                           VerticalTextAlignment="Start"
-                           Padding="3" 
-                           TextColor="Black" 
-                           FontSize="20" 
-                           FontAttributes="Bold"/>
-                    <DatePicker Grid.Row="1"
-                                Grid.Column="0"
-                                Grid.ColumnSpan="2"
-                                Format="MMMM dd, yyyy"
-                                TextColor="Black"
-                                FontSize="18"
-                                HorizontalOptions="Start"/>
+                    <Label Text="Start Date" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" 
+                   Padding="3" TextColor="Black" FontSize="20" FontAttributes="Bold"/>
+                    <DatePicker x:Name="StartDatePickerEntry"
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        Grid.ColumnSpan="2"
+                        Format="MMMM dd, yyyy"
+                        TextColor="Black"
+                        FontSize="18"
+                        HorizontalOptions="Start"/>
                 </Grid>
             </Frame>
 
             <Frame BorderColor="Black"
-                   CornerRadius="5"
-                   Padding="15"
-                   BackgroundColor="Azure"
-                   HasShadow="True"
-                   Margin="0,20,0,0">
+           CornerRadius="5"
+           Padding="015"
+           BackgroundColor="Azure"
+           HasShadow="True"
+           Margin="0,20,0,0">
                 <Grid ColumnSpacing="5" RowSpacing="5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -93,33 +87,55 @@
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
 
-                    <Label Text="End Date" 
-                           HorizontalTextAlignment="Start" 
-                           VerticalTextAlignment="Start"
-                           Padding="3" 
-                           TextColor="Black" 
-                           FontSize="20" 
-                           FontAttributes="Bold"/>
-                    <DatePicker Grid.Row="1"
-                                Grid.Column="0"
-                                Grid.ColumnSpan="2"
-                                Format="MMMM dd, yyyy"
-                                TextColor="Black"
-                                FontSize="18"
-                                HorizontalOptions="Start"/>
+                    <Label Text="End Date" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" 
+                   Padding="3" TextColor="Black" FontSize="20" FontAttributes="Bold"/>
+                    <DatePicker 
+                x:Name="EndDatePickerEntry"
+                Grid.Row="1"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                Format="MMMM dd, yyyy"
+                TextColor="Black"
+                FontSize="18"
+                HorizontalOptions="Start"/>
                 </Grid>
             </Frame>
 
-            <Button Text="Save"
-                    BackgroundColor="#4CAF50"
-                    TextColor="White"
-                    FontSize="20"
-                    FontAttributes="Bold"
-                    Margin="20,30,20,20"
-                    HeightRequest="50"
-                    CornerRadius="10"
-                    x:Name="SaveButton"
-                    HorizontalOptions="Fill"/>
+            <Frame BorderColor="Black"
+            CornerRadius="5"
+            Padding="015"
+            BackgroundColor="Azure"
+            HasShadow="True"
+            Margin="0,20,0,0">
+                <Grid ColumnSpacing="5" RowSpacing="5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <Label Text="Type" HorizontalTextAlignment="Start" VerticalTextAlignment="Start" 
+                    Padding="3" TextColor="Black" FontSize="20" FontAttributes="Bold"/>
+                    <Picker x:Name="TypePickerEntry" Title="Choose a status" TextColor="Black" Grid.Row="1"/>
+                    <Label x:Name="SelectedTypeLabel" FontSize="16" TextColor="Black" Grid.Row="1"/>
+                </Grid>
+            </Frame>
+
+            <Button
+                x:Name="SaveButton"
+                Text="Save"
+                BackgroundColor="#4CAF50"
+                TextColor="White"
+                FontSize="20"
+                FontAttributes="Bold"
+                Margin="20,30,20,20"
+                HeightRequest="50"
+                CornerRadius="10"
+                HorizontalOptions="Fill"
+                Clicked="SaveButton_Clicked"/>
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
