--- a/Pages/NavigationPages/CourseViewNavPage.xaml
+++ b/Pages/NavigationPages/CourseViewNavPage.xaml
@@ -50,7 +50,7 @@
                                 <Label Text="Course Information" Grid.Row="1" Grid.Column="0"  FontSize="22" FontAttributes="Bold" TextColor="Black" TextDecorations="Underline" Margin="0,10,0,0"/>
                                 <Label Text="{Binding StartDate, StringFormat='Start: {0:MM/dd/yyyy}'}" Grid.Row="2" Grid.Column="0"  FontSize="18" FontAttributes="Bold" TextColor="DarkCyan" Margin="0,5,0,0"/>
                                 <Label Text="{Binding EndDate, StringFormat='End: {0:MM/dd/yyyy}'}" Grid.Row="3" Grid.Column="0"  FontSize="18" FontAttributes="Bold" TextColor="DarkCyan" Margin="0,5,0,0"/>
-                                <Label Text="{Binding Status}" Grid.Row="4" Grid.Column="0"  FontSize="18" FontAttributes="Bold" TextColor="ForestGreen" />
+                                <Label Text="{Binding Status, StringFormat='Status: {0}'}" Grid.Row="4" Grid.Column="0"  FontSize="18" FontAttributes="Bold" TextColor="ForestGreen" />
 
 
                                 <Label Text="Instructor Information" Grid.Row="5" Grid.Column="0"  FontSize="22" FontAttributes="Bold" TextColor="Black" TextDecorations="Underline" Margin="0,10,0,0"/>
